--- a/src/app/main/components/events/events.component.html
+++ b/src/app/main/components/events/events.component.html
@@ -17,29 +17,29 @@
             <td>Статус</td>
         </tr>
         <tr class="tr" *ngFor="let event of events?.results">
-            <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.kind}}</td>
+            <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.sport}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.type}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.time_end | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.location.name}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.price}}</td>
-            <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.players_count}}</td>
+            <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.participants_count}}</td>
             <td *ngIf="aAuth" [routerLink]="['../event', event.id]">{{event.status}}</td>
 
-            <td *ngIf="!aAuth">{{event.kind}}</td>
+            <td *ngIf="!aAuth">{{event.sport}}</td>
             <td *ngIf="!aAuth">{{event.type}}</td>
             <td *ngIf="!aAuth">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="!aAuth">{{event.time_end | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td *ngIf="!aAuth">{{event.location.name}}</td>
             <td *ngIf="!aAuth">{{event.price}}</td>
-            <td *ngIf="!aAuth">{{event.players_count}}</td>
+            <td *ngIf="!aAuth">{{event.participants_count}}</td>
             <td *ngIf="!aAuth">{{event.status}}</td>
         </tr>
     </table>
     <div class="mobile">
         <div *ngFor="let event of events?.results" [routerLink]="['../event', event.id]" class="cell">
             <div style="display: flex; justify-content: space-between;">
-                <p style="font-size: 16px;">{{event.kind}}</p>
+                <p style="font-size: 16px;">{{event.sport}}</p>
                 <p style="font-size: 16px;">{{event.type}}</p>
             </div>
             <p style="text-align: center; font-size: 16px;">{{event.time_start | date: 'dd.MM.YYYY'}}</p>
@@ -47,7 +47,7 @@
             <div style="display: flex; justify-content: space-between;">
                 <p style="font-size: 18px;">{{event.location.name}}</p>
                 <p style="font-size: 18px;">{{event.price}}&#8381;</p>
-                <p style="font-size: 18px;">{{event.players_count}}чел.</p>
+                <p style="font-size: 18px;">{{event.participants_count}}чел.</p>
             </div>
         </div>
     </div>
