--- a/src/app/main/components/add-player/add-player.component.html
+++ b/src/app/main/components/add-player/add-player.component.html
@@ -2,7 +2,7 @@
     <p class="title">Добавить игрока</p>
     <form [formGroup]="addPlayerForm" novalidate (ngSubmit)="sendService()">
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <p class="subtitle">Команда: {{team?.full_name}}</p>
+            <p class="subtitle">Под каким номером хотите вступить в команду?</p>
 
             <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
                 <mat-label>Номер игрока</mat-label>
