--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -1,107 +1,103 @@
-<!-- <div style="display: flex; flex-wrap: wrap;">
-    <div class="container">
-        <p class="title">Событие</p>
-
-        <table>
-            <tr class="tr__head">
-                <td>Время</td>
-                <td>Место</td>
-                <td>Цена</td>
-            </tr>
-            <tr class="tr">
-                <td>{{event?.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
-                <td>{{event?.location.name}}</td>
-                <td>{{event?.price}}</td>
-            </tr>
-        </table>
-        
-        <form [formGroup]="addStatusForm" novalidate (ngSubmit)="sendStatus()">
-        <div class="event__box_btns">
-            <mat-form-field appearance="fill" style="width: 300px;">
-                <mat-label>Игроки</mat-label>
-                <mat-select formControlName="player">
-                    <mat-option *ngFor="let player of players?.results" [value]="player.id">
-                        {{player.team.full_name}} ({{player.number}})
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <button class="event__btn" [disabled]="addStatusForm.invalid">{{btnTitle}}</button>
-        </div>
-        </form>
-    </div>
-
-    <div class="container">
-        <p class="title">Участники события</p>
-        <table>
-            <tr class="tr__head">
-                <td>Имя</td>
-                <td>Команда</td>
-                <td>Номер</td>
-            </tr>
-            <tr class="tr" *ngFor="let pl of event?.players">
-                <td>{{pl.user.full_name}}</td>
-                <td>{{pl.team.full_name}}</td>
-                <td>{{pl.number}}</td>
-            </tr>
-        </table>
-    </div>
-</div> -->
-
-
-
 <div class="container">
-    <div style="display: flex;">
-        <div>
-            <div style="border: 1px solid #EEF5F8; margin: 5px; padding: 5px;">
-                <p style="color: #EEF5F8;">Данные о событии</p>
-                <p style="color: #EEF5F8;">Время {{event?.time_start | date: 'dd.MM.YYYY HH:mm'}}</p>
-                <p style="color: #EEF5F8;">Место {{event?.location.name}}</p>
-                <p style="color: #EEF5F8;">Цена {{event?.price}}</p>
+    <div>
+        <div style="width: 400px;">
+            <p class="text" style="font-size: 20px;">Данные о событии</p>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Статус события: </p>
+                <p class="text__data">{{event?.status}}</p>
             </div>
-            <div style="display: flex;">
-                <div style="border: 1px solid #EEF5F8; margin: 5px; padding: 5px;">
-                    <p style="color: #EEF5F8;">Подтвержденные участники</p>
-                    <div *ngFor="let ev of event?.surveys.true">
-                        <p style="color: #EEF5F8;">{{ev.user.full_name}}</p>
-                    </div>
-                </div>
-                <div style="border: 1px solid #EEF5F8; margin: 5px; padding: 5px;">
-                    <p style="color: #EEF5F8;">Ждут подтверждения</p>
-                    <div *ngFor="let ev of event?.surveys.unknown">
-                        <p style="color: #EEF5F8;">{{ev.user.full_name}}</p>
-                    </div>
-                </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Тип события: </p>
+                <p class="text__data">{{event?.type}}</p>
             </div>
-            <div style="border: 1px solid #EEF5F8; margin: 5px; padding: 5px;">
-                <p style="color: #EEF5F8;">Чат</p>
-                <form [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
-                    <input formControlName="comment">
-                    <button mat-raised-button [disabled]="addCommentForm.invalid">Отправить</button>
-                </form>
-                <div *ngFor="let c of event?.comments">
-                    <p style="color: #EEF5F8;">{{c.user.full_name}} {{c.comment}}</p>
-                </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Вид спорта: </p>
+                <p class="text__data">{{event?.sport}}</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Место проведения: </p>
+                <p class="text__data" style="text-align: end;">{{event?.location.name}}, {{event?.location.address}}</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Время начала: </p>
+                <p class="text__data">{{event?.time_start | date: 'dd.MM.YYYY HH:mm'}}</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Время окончания: </p>
+                <p class="text__data">{{event?.time_end | date: 'dd.MM.YYYY HH:mm'}}</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Цена: </p>
+                <p class="text__data" style="color: #089F5F;">{{event?.price}}&#8381;</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Цена за человека: </p>
+                <p class="text__data" style="color: #089F5F;">{{event?.stats.price_per_player}}&#8381;</p>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+                <p class="text__title">Комментарий к событию: </p>
+                <p class="text__data">{{event?.comment}}</p>
             </div>
         </div>
-        <div>
-            <div style="border: 1px solid #EEF5F8; margin: 5px; padding: 5px;">
-                <p style="color: #EEF5F8;">Проголосовать</p>
-                <button *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">+</button>
-                <button *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">-</button>
 
-                <button *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">+</button>
-                <button *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">-</button>
+        <div style="margin: 20px 0 10px 0;">
+            <button style="width: 200px; background: #089F5F;" *ngIf="answer == null" mat-raised-button (click)="sendTruePost()">Приду</button>
+            <button style="width:  200px; background: #9f0808;" *ngIf="answer == null" mat-raised-button (click)="sendFalsePost()">Не приду</button>
+
+            <button style="width: 200px; background: #089F5F;" *ngIf="answer == false" mat-raised-button (click)="sendTruePut()">Приду</button>
+            <button style="width:  200px; background: #9f0808;" *ngIf="answer == true" mat-raised-button (click)="sendFalsePut()">Не приду</button>
+        </div>
+        <div>
+            <p style="color: #EEF5F8; font-size: 20px;">Список проголосовавших</p>
+            <div *ngFor="let ev of event?.surveys.true">
+                <p style="color: #EEF5F8; display: flex; align-items: center;">
+                    <mat-icon style="color: #089F5F;" aria-hidden="false" aria-label="Example logout icon">done</mat-icon>
+                    {{ev.user.full_name}}
+                </p>
             </div>
-            <div style="border: 1px solid #EEF5F8; margin: 5px; padding: 5px;">
-                <p style="color: #EEF5F8;">Список проголосовавших</p>
-                <div *ngFor="let ev of event?.surveys.true">
-                    <p style="color: #EEF5F8;">{{ev.user.full_name}} придет!</p>
-                </div>
-                <div *ngFor="let ev of event?.surveys.unknown">
-                    <p style="color: #EEF5F8;">{{ev.user.full_name}} не знает!</p>
-                </div>
-                <div *ngFor="let ev of event?.surveys.false">
-                    <p style="color: #EEF5F8;">{{ev.user.full_name}} не придет!</p>
+            <div *ngFor="let ev of event?.surveys.unknown">
+                <p style="color: #EEF5F8; display: flex; align-items: center;">
+                    <mat-icon style="color: #9f9508;" aria-hidden="false" aria-label="Example logout icon">pending</mat-icon>
+                    {{ev.user.full_name}}
+                </p>
+            </div>
+            <div *ngFor="let ev of event?.surveys.false">
+                <p style="color: #EEF5F8; display: flex; align-items: center;">
+                    <mat-icon style="color: #9f0808;" aria-hidden="false" aria-label="Example logout icon">close</mat-icon>
+                    {{ev.user.full_name}}
+                </p>
+            </div>
+        </div>
+
+        <div>
+            <p style="color: #EEF5F8; font-size: 20px; margin: 20px 0 10px 0;">Комментарии</p>
+            <form [formGroup]="addCommentForm" (ngSubmit)="sendComment()">
+                <mat-form-field appearance="fill" style="width: 350px;">
+                    <mat-label>Введите текст</mat-label>
+                    <textarea matInput
+                                cdkTextareaAutosize
+                                #autosize="cdkTextareaAutosize"
+                                cdkAutosizeMinRows="1"
+                                cdkAutosizeMaxRows="5"
+                                formControlName="comment"
+                                style="color: #EEF5F8;"></textarea>
+                </mat-form-field>
+                <button style="background-color: #121218; border: none; cursor: pointer;" [disabled]="addCommentForm.invalid">
+                    <mat-icon style="color: #EEF5F8; margin-left: 20px;" aria-hidden="false" aria-label="Example send icon">send</mat-icon>
+                </button>
+            </form>
+            <p style="color: #EEF5F8; display: flex; align-items: center; cursor: pointer; justify-content: center; margin-bottom: 10px;" (click)="openComment()">
+                <span *ngIf="!commentWindow">Открыть комментарии </span>
+                <span *ngIf="commentWindow">Закрыть комментарии </span>
+                <mat-icon *ngIf="!commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_more</mat-icon>
+                <mat-icon *ngIf="commentWindow" style="color: #EEF5F8; margin-left: 10px;" aria-hidden="false" aria-label="Example send icon">expand_less</mat-icon>
+            </p>
+            <div *ngIf="commentWindow">
+                <div *ngFor="let c of event?.comments">
+                    <div style="background-color: #788CA0; margin: 5px 0; border-radius: 5px 5px 5px 0px; display: inline-block; padding: 5px 10px;">
+                        <span style="font-size: 12px; color: #121218;">{{c.user.full_name}}</span>
+                        <p style="padding: 5px 0px; color: #EEF5F8;">{{c.comment}} <span style="text-align: end; font-size: 12px; color: #121218;">{{c.time | date: 'HH:mm'}}</span></p>
+                    </div>
                 </div>
             </div>
         </div>
