--- a/src/app/main/components/event/event.component.scss
+++ b/src/app/main/components/event/event.component.scss
@@ -5,7 +5,7 @@ $blue: #007EA7;
 $dark: #121218;
 $lightdark: #1C1C24;
 .container {
-    width: 600px;
+    width: 400px;
     border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
@@ -77,6 +77,19 @@ td {
 }
 .event__btn:hover {
     background: $grey;
+}
+.text__title {
+    font-size: 16px;
+    color: $grey;
+    padding: 5px 0;
+    user-select: none;
+}
+.text__data {
+    font-size: 16px;
+    color: $light;
+    padding: 5px 0;
+    font-weight: 500;
+    user-select: none;
 }
 @media(max-width: 700px) {
     .container {
